--- a/cd/jenkins/Jenkinsfile
+++ b/cd/jenkins/Jenkinsfile
@@ -3,9 +3,11 @@ pipeline {
 
     stages {
         stage('deploy') {
-            steps {
-                // Run the docker-compose
-                sh 'docker-compose up'
+            dir('cd/docker/'){
+                steps {
+                    // Run the docker-compose
+                    sh 'docker-compose up'
+                }
             }
         }
 
