--- a/ci/jenkins/Jenkinsfile
+++ b/ci/jenkins/Jenkinsfile
@@ -22,11 +22,17 @@ pipeline {
                 sh 'mvn test'
             }
         }
-
+        stage('Clone GitOps Repository') {
+            steps {
+                // Clone the GitHub repository
+                git url: 'https://github.com/Mohmedahmeed/GitOps', branch: 'main'
+            }
+        }
         stage('Build Docker Image') {
             steps {
                 echo 'Building Docker image'
                 // Build the Docker image
+                sh 'cd ci/docker/'
                 sh 'docker build -t meda7med/kaddem5se4:latest .'
             }
         }
