--- a/ci/jenkins/Jenkinsfile
+++ b/ci/jenkins/Jenkinsfile
@@ -25,6 +25,8 @@ pipeline {
         stage('Clone GitOps Repository') {
             steps {
                 // Clone the GitHub repository
+                sh 'ls'
+                sh 'pwd'
                 git url: 'https://github.com/Mohmedahmeed/GitOps', branch: 'main'
             }
         }
