--- a/ci/jenkins/Jenkinsfile
+++ b/ci/jenkins/Jenkinsfile
@@ -37,7 +37,7 @@ pipeline {
                 sh 'ls'
                 sh 'echo hello'
                 sh 'git clone https://github.com/Mohmedahmeed/GitOps'
-                sh 'cd GitOps/ci/docker/'
+                sh 'cd ci/docker/'
                 sh 'ls -l'
                 sh 'pwq'
                 sh 'docker build -t meda7med/kaddem5se4:latest .'
