--- a/ci/jenkins/Jenkinsfile
+++ b/ci/jenkins/Jenkinsfile
@@ -33,13 +33,9 @@ pipeline {
         stage('Build Docker Image') {
             steps {
                 echo 'Building Docker image'
-                // Build the Docker image
-                sh 'ls'
-                sh 'echo hello'
+                // Build the Docker images
                 sh 'git clone https://github.com/Mohmedahmeed/GitOps'
                 sh 'cd ci/docker/'
-                sh 'ls -l'
-                sh 'pwq'
                 sh 'docker build -t meda7med/kaddem5se4:latest .'
             }
         }
