--- a/cd/jenkins/Jenkinsfile
+++ b/cd/jenkins/Jenkinsfile
@@ -7,7 +7,7 @@ pipeline {
                     // Run the docker-compose
                     sh 'ls'
                     sh 'pwd'
-                    sh 'docker-compose up'
+                    sh 'docker-compose -f GitOps/ci/docker/docker-compose.yml up'
                 }
             }
     }
