--- a/cd/jenkins/Jenkinsfile
+++ b/cd/jenkins/Jenkinsfile
@@ -5,7 +5,7 @@ pipeline {
         stage('Clone Repository') {
             steps {
                 // Clone the GitHub repository
-                git url: 'https://github.com/Mohmedahmeed/GitOps.git', branch: 'main'
+                git url: 'https://github.com/Mohmedahmeed/GitOps.git'
             }
         }
         stage('deploy') {
