--- a/cd/jenkins/Jenkinsfile
+++ b/cd/jenkins/Jenkinsfile
@@ -2,17 +2,12 @@ pipeline {
     agent any
 
     stages {
-        stage('Clone Repository') {
-            steps {
-                // Clone the GitHub repository
-                git url: 'https://github.com/Mohmedahmeed/GitOps.git'
-            }
-        }
         stage('deploy') {
                 steps {
                     // Run the docker-compose
                     sh 'ls'
                     sh 'pwd'
+                    sh 'git clone https://github.com/Mohmedahmeed/GitOps.git'
                     sh 'docker-compose -f GitOps/cd/docker/docker-compose.yml up'
                 }
             }
