--- a/cd/docker/docker-compose.yml
+++ b/cd/docker/docker-compose.yml
@@ -43,7 +43,7 @@ services:
     restart: always
 
   frontend:
-    image: firasab/kaddem_front:latest  # Using your Angular image from Docker Hub
+    image: firasab/kaddem_front:latest
     container_name: frontend-container
     ports:
       - "4200:80"  # Assuming the Angular app runs on port 80 in the container
